--- a/views/index.html
+++ b/views/index.html
@@ -2,15 +2,13 @@
 <html ng-app='ToDoList'>
 <title>ToDo List</title>
 <head>
-
-<link rel="stylesheet" href="css/style.css">
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/angular/angular.js"></script>
-<script src="js/app.js"></script>
-
+  <link rel="stylesheet" href="css/style.css">
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/bower_components/angular/angular.js"></script>
+  <script src="/js/app.js"></script>
 </head>
 <center><body ng-controller='ToDoListController as todo'>
-  <h1><center>To Do List</center></h1>
+  <h1>To Do List</h1>
   <br>
 <div class="form-group">
   <div class="row">
